--- a/palworld-map.service
+++ b/palworld-map.service
@@ -5,8 +5,9 @@ Wants=network-online.target
 After=syslog.target network.target nss-lookup.target network-online.target palworld.service
 
 [Service]
-ExecStart=/usr/local/bin/pnpm run start
+Type=simple
 
+ExecStart=/usr/local/bin/pnpm run start
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s INT $MAINPID
 
@@ -14,7 +15,7 @@ User=steam
 Group=steam
 StandardOutput=journal
 Restart=on-failure
-WorkingDirectory=/home/steam/palworld-ma
+WorkingDirectory=/home/steam/palworld-map
 
 
 [Install]
